--- a/Django Project/FinalProject/myapp/templates/signin.html
+++ b/Django Project/FinalProject/myapp/templates/signin.html
@@ -50,9 +50,41 @@
     </nav>
     <!-- Navbar End -->
     <div class="container">
+
+        {% if msg %}
+        <div class="alert alert-danger alert-dismissible fade show my-2" role="alert">
+            <strong>{{msg}}</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endif %}
+
         <h2 style="text-align: center;">Signin</h2>
         <hr>
     </div>
+
+    <!-- Signin Form Start -->
+    <div class="container">
+        <form method="post">
+            {% csrf_token %}
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Email address / Username</label>
+                <input type="email" name="username" class="form-control" id="exampleInputEmail1"
+                    aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <input type="password" name="password" class="form-control" id="exampleInputPassword1">
+            </div>
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            </div>
+            <button type="submit" class="btn btn-dark">Signin</button>
+        </form>
+    </div>
+
+    <!-- Signin Form Start -->
 </body>
 
 </html>
