--- a/Django Project/FinalProject/myapp/templates/otpverify.html
+++ b/Django Project/FinalProject/myapp/templates/otpverify.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notes</title>
+    <title>OTP Verification</title>
     <link rel="shortcut icon" href="/static/images/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -43,31 +43,41 @@
                     </li>
 
                 </ul>
-                {% if user is none %}
-                <a href="/signin" class="btn btn-warning" type="button">Signin</a>
-                <a href="/signup" class="btn btn-secondary mx-2" type="button">Signup</a>
-                {% else %}
-                <!-- <a href="#" class="btn btn-danger" type="button">Logout</a> -->
-                <div class="dropdown">
-                    <button class="btn btn-danger dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        {{user}}
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/profile">Update Profile</a></li>
-                        <li><a class="dropdown-item" href="/userlogout">Logout</a></li>
-                    </ul>
-                </div>
-                {% endif %}
+                <a href="/signin" class="btn btn-warning mx-2" type="button">Signin</a>
+                <a href="/signup" class="btn btn-secondary" type="button">Signup</a>
             </div>
         </div>
     </nav>
     <!-- Navbar End -->
-
     <div class="container">
-        <h2 style="text-align: center;">Notes</h2>
+
+        {% if msg %}
+        <div class="alert alert-danger alert-dismissible fade show my-2" role="alert">
+            <strong>{{msg}}</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endif %}
+
+        <h2 style="text-align: center;">OTP Verification</h2>
         <hr>
     </div>
+
+    <!-- Signin Form Start -->
+    <div class="container">
+        <form method="post">
+            {% csrf_token %}
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Your OTP</label>
+                <input type="number" name="otp" class="form-control" id="exampleInputEmail1"
+                    aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+
+            <button type="submit" class="btn btn-success">Verify</button>
+        </form>
+    </div>
+
+    <!-- Signin Form Start -->
 </body>
 
 </html>
