--- a/Django Project/FinalProject/myapp/templates/profile.html
+++ b/Django Project/FinalProject/myapp/templates/profile.html
@@ -43,16 +43,118 @@
                     </li>
 
                 </ul>
-                <a href="/signin" class="btn btn-warning mx-2" type="button">Signin</a>
-                <a href="/signup" class="btn btn-secondary" type="button">Signup</a>
+                {% if user is none %}
+                <a href="/signin" class="btn btn-warning" type="button">Signin</a>
+                <a href="/signup" class="btn btn-secondary mx-2" type="button">Signup</a>
+                {% else %}
+                <div class="dropdown">
+                    <button class="btn btn-danger dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        {{user}}
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/userlogout">Logout</a></li>
+                    </ul>
+                </div>
+                {% endif %}
             </div>
         </div>
     </nav>
     <!-- Navbar End -->
 
     <div class="container">
+
+        {% if msg %}
+        <div class="alert alert-success alert-dismissible fade show my-2" role="alert">
+            <strong>{{msg}}</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endif %}
+
         <h2 style="text-align: center;">Profile</h2>
         <hr>
+        <form method="post" enctype="multipart/form-data" class="row g-3 needs-validation" novalidate>
+            {% csrf_token %}
+            <div class="col-md-12">
+                <img src="{{cuser.photo.url}}" height="150px" width="150px">
+            </div>
+            <div class="col-md-12">
+                <label for="validationCustom01" class="form-label">Your Photo</label>
+
+                <input type="file" name="photo" value="#" class="form-control" id="validationCustom01" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            <div class="col-md-6">
+                <label for="validationCustom01" class="form-label">First name</label>
+                <input type="text" name="firstname" value="{{cuser.firstname}}" class="form-control"
+                    id="validationCustom01" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            <div class="col-md-6">
+                <label for="validationCustom02" class="form-label">Last name</label>
+                <input type="text" name="lastname" value="{{cuser.lastname}}" class="form-control"
+                    id="validationCustom02" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            <div class="col-md-6">
+                <label for="validationCustomUsername" class="form-label">Username</label>
+                <div class="input-group has-validation">
+                    <span class="input-group-text" id="inputGroupPrepend">@</span>
+                    <input type="email" value="{{cuser.username}}" name="username" class="form-control"
+                        id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+                    <div class="invalid-feedback">
+                        Please choose a username.
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <label for="validationCustom01" class="form-label">Password</label>
+                <input type="password" value="{{cuser.password}}" name="password" class="form-control"
+                    id="validationCustom01" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            <div class="col-md-6">
+                <label for="validationCustom03" class="form-label">City</label>
+                <input type="text" value="{{cuser.city}}" name="city" class="form-control" id="validationCustom03"
+                    required>
+                <div class="invalid-feedback">
+                    Please provide a valid city.
+                </div>
+            </div>
+            <div class="col-md-6">
+                <label for="validationCustom04" class="form-label">State</label>
+                <select class="form-select" name="state" id="validationCustom04" required>
+                    <option selected disabled value="">{{cuser.state}}</option>
+                    <option>Gujarat</option>
+                    <option>Delhi</option>
+                    <option>Punjab</option>
+                    <option>Other</option>
+                </select>
+                <div class="invalid-feedback">
+                    Please select a valid state.
+                </div>
+            </div>
+            <div class="col-md-6">
+                <label for="validationCustom05" class="form-label">Mobile</label>
+                <input type="number" name="mobile" value="{{cuser.mobile}}" class="form-control" id="validationCustom05"
+                    required>
+                <div class="invalid-feedback">
+                    Please provide a valid zip.
+                </div>
+            </div>
+
+            <div class="col-12">
+                <button class="btn btn-success" type="submit">Update Profile</button>
+            </div>
+        </form>
     </div>
 </body>
 
