--- a/Django Project/FinalProject/myapp/templates/notes.html
+++ b/Django Project/FinalProject/myapp/templates/notes.html
@@ -66,6 +66,34 @@
     <div class="container">
         <h2 style="text-align: center;">Notes</h2>
         <hr>
+
+        {% if msg %}
+        <div class="alert alert-success alert-dismissible fade show my-2" role="alert">
+            <strong>{{msg}}</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endif %}
+
+        <div class="container my-3">
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="floatingInput" name="title"
+                        placeholder="name@example.com">
+                    <label for="floatingInput">Title</label>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Description</label>
+                    <textarea class="form-control" name="desc" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <div>
+                    <label for="formFileLg" class="form-label">Upload your File's</label>
+                    <input class="form-control form-control-lg" id="formFileLg" name="notefile" type="file">
+                </div>
+                <button type="submit" class="btn btn-dark btn-lg my-3">Submit Notes</button>
+            </form>
+        </div>
+
     </div>
 </body>
 
