--- a/Django Project/FinalProject/myapp/templates/profile.html
+++ b/Django Project/FinalProject/myapp/templates/profile.html
@@ -131,8 +131,8 @@
             </div>
             <div class="col-md-6">
                 <label for="validationCustom04" class="form-label">State</label>
-                <select class="form-select" name="state" id="validationCustom04" required>
-                    <option selected disabled value="">{{cuser.state}}</option>
+                <select class="form-select" name="state" id="validationCustom04">
+                    <option disabled>--- Select State ---</option>
                     <option>Gujarat</option>
                     <option>Delhi</option>
                     <option>Punjab</option>
