--- a/Django Project/FinalProject/adminapp/templates/admin_home.html
+++ b/Django Project/FinalProject/adminapp/templates/admin_home.html
@@ -5,11 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin | HOME</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+        crossorigin="anonymous"></script>
 </head>
 
 <body style="background-color: rgb(208, 239, 150);">
     <h1 style="text-align: center;">Welcome to Admin Dashboard</h1>
     <hr>
+
+
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-sm-6 mb-3 mb-sm-0">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Total Registred Users</h5>
+                        <p class="card-text">Click below, for show all the users data.</p>
+                        <a href="/adminapp/admin_userdata" class="btn btn-primary">Show User's Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Total Notes Submission</h5>
+                        <p class="card-text">Click below, for show all the notes data.</p>
+                        <a href="/adminapp/admin_notesdata" class="btn btn-primary">Show Note's Details</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
