--- a/Django Project/FinalProject/adminapp/templates/admin_userdata.html
+++ b/Django Project/FinalProject/adminapp/templates/admin_userdata.html
@@ -4,44 +4,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin | Userdata</title>
+    <title>Admin | User Data</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
         crossorigin="anonymous"></script>
+
+    <style>
+        body {
+            background-color: #f1f8e9;
+        }
+
+        h1 {
+            text-align: center;
+            margin-top: 30px;
+            font-weight: bold;
+            color: #2e7d32;
+        }
+
+        .table-container {
+            background: #ffffff;
+            border-radius: 15px;
+            padding: 30px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+        }
+
+        .table thead {
+            background-color: #388e3c;
+            color: white;
+        }
+
+        img.profile-img {
+            border-radius: 50%;
+            object-fit: cover;
+        }
+    </style>
 </head>
 
-<body style="background-color: rgb(208, 239, 150);">
-    <h1 style="text-align: center;">All Users Data</h1>
-    <hr>
+<body>
 
-    <div class="container my-5">
-        <table class="table table-dark table-hover">
-            <tr>
-                <td>Created_at</td>
-                <td>Profile Photo</td>
-                <td>Firstname</td>
-                <td>Lastname</td>
-                <td>Username</td>
-                <td>State</td>
-                <td>City</td>
-                <td>Mobile</td>
-            </tr>
-            {% for i in users %}
-            <tr>
-                <td>{{i.created}}</td>
-                <td><img src="{{i.photo.url}}" height="150" width="150"></td>
-                <td>{{i.firstname}}</td>
-                <td>{{i.lastname}}</td>
-                <td>{{i.username}}</td>
-                <td>{{i.state}}</td>
-                <td>{{i.city}}</td>
-                <td>{{i.mobile}}</td>
-            </tr>
-            {% endfor %}
+    <h1>All Registered Users</h1>
+    <hr class="mx-auto w-50">
+
+    <div class="container my-5 table-container">
+        <table class="table table-bordered table-hover align-middle">
+            <thead>
+                <tr>
+                    <th>Created At</th>
+                    <th>Profile Photo</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Username</th>
+                    <th>State</th>
+                    <th>City</th>
+                    <th>Mobile</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for i in users %}
+                <tr>
+                    <td>{{ i.created }}</td>
+                    <td>
+                        <img src="{{ i.photo.url }}" height="100" width="100" class="profile-img">
+                    </td>
+                    <td>{{ i.firstname }}</td>
+                    <td>{{ i.lastname }}</td>
+                    <td>{{ i.username }}</td>
+                    <td>{{ i.state }}</td>
+                    <td>{{ i.city }}</td>
+                    <td>{{ i.mobile }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
         </table>
-
     </div>
 
 </body>
